--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,10 @@ body {
 
 /*-----Members----*/
 .main-members {
+  margin-top: 1rem;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  justify-content: space-around;
 }
 .main-members-card:nth-child(even) {
   margin-top: 2.5rem;
